VR: Fix content quad black flashes on navigation

On navigation, or at other times, content was flashing.  This was
happening because unrelated code presumably mucks with the GL blend
mode, and we weren't setting it before drawing content via the new
quad-layer mechanism.

BUG=838695

Change-Id: I93791ff26cf52d74db410cf1590b9f5baca21765
Reviewed-on: https://chromium-review.googlesource.com/1062196
Reviewed-by: Biao She <bshe@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559270}
Former-commit-id: 6306fbad688c76481d89fcb9c11224854777e210